// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout snapshots same structure, density-only changes at 80x24 1`] = `
"[35mDevAgent[39m[90m │ [39mollama-agent[90m │ [39m[34mqwen3:30b[39m[90m │ [39m⎇ main[90m │ [39mctx68%[90m │ [39m[34mCode[39m[90m │ [39m[32mIDLE[39m[90m │ [39m[33mGit:2m[39m
[90m─[39m[1m[34m 1 Conversation [22m[39m[90m──────────────────────────────────────────────────────────────[39m
[32m> [39mcreate filesystem tool

  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project












[90m[2m───────────────────────────────────────────────────────────────────────────────[22m[39m
[34mChat·[39m[90m │ [39m[90mPlan·[39m[90m │ [39m[34mExec▶[39m[90m │ [39m[34mTasks2[39m[90m │ [39m[33mGit2[39m[90m │ [39m[90mLogs·[39m[90m │ [39m[90mMem·[39m[90m │ [39m[90mMdl·[39m[90m │ [39m[90mMCP·[39m[90m │ [39m[90mSkl·[39m[90m │ [39m[90mLSP·[39m
[90m[2m───────────────────────────────────────────────────────────────────────────────[22m[39m
[1m[32m> [22m[39m[7m [27m
[34mMode:Code[39m[90m │ [39m[34mModel:qwen3:30b[39m[90m │ [39mWorkspace:ollama-agent[90m │ [39m[90mCtrl+P Palette[39m"
`;

exports[`layout snapshots same structure, density-only changes at 100x30 1`] = `
"[35mDevAgent[39m[90m │ [39mollama-agent[90m │ [39m[34mqwen3:30b[39m[90m │ [39m⎇ main[90m │ [39mctx68%[90m │ [39m[34mCode[39m[90m │ [39m[32mIDLE[39m[90m │ [39m[33mGit:2m[39m[90m │ [39m[90m10:42[39m
[90m─[39m[1m[34m 1 Conversation [22m[39m[90m──────────────────────────────────────────────────────────────────────────────────[39m
[32m> [39mcreate filesystem tool

  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project


















[90m[2m───────────────────────────────────────────────────────────────────────────────────────────────────[22m[39m
[34mChat·[39m[90m │ [39m[90mPlan·[39m[90m │ [39m[34mExec▶[39m[90m │ [39m[34mTasks2[39m[90m │ [39m[33mGit2[39m[90m │ [39m[90mLogs·[39m[90m │ [39m[90mMem·[39m[90m │ [39m[90mMdl·[39m[90m │ [39m[90mMCP·[39m[90m │ [39m[90mSkl·[39m[90m │ [39m[90mLSP·[39m[90m │ [39m[90mTok48k/71k[39m
[90m[2m───────────────────────────────────────────────────────────────────────────────────────────────────[22m[39m
[1m[32m> [22m[39m[7m [27m
[34mMode:Code[39m[90m │ [39m[34mModel:qwen3:30b[39m[90m │ [39mWorkspace:ollama-agent[90m │ [39m[90mCtrl+P Palette[39m"
`;

exports[`layout snapshots same structure, density-only changes at 120x30 1`] = `
"[35mDevAgent[39m[90m │ [39mollama-agent[90m │ [39m[34mqwen3:30b[39m[90m │ [39m⎇ main[90m │ [39mctx68%[90m │ [39m[34mCode[39m[90m │ [39m[32mIDLE[39m[90m │ [39m[33mGit:2m[39m[90m │ [39m[90m10:42[39m
[90m─[39m[1m[34m 1 Conversation [22m[39m[90m──────────────────────────────────────────────────────────────────────────────────────────────────────[39m
[32m> [39mcreate filesystem tool

  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project


















[90m[2m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[22m[39m
[34mChat·[39m[90m │ [39m[90mPlan·[39m[90m │ [39m[34mExec▶[39m[90m │ [39m[34mTasks2[39m[90m │ [39m[33mGit2[39m[90m │ [39m[90mLogs·[39m[90m │ [39m[90mMem·[39m[90m │ [39m[90mMdl·[39m[90m │ [39m[90mMCP·[39m[90m │ [39m[90mSkl·[39m[90m │ [39m[90mLSP·[39m[90m │ [39m[90mTok48k/71k[39m
[90m[2m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[22m[39m
[1m[32m> [22m[39m[7m [27m
[34mMode:Code[39m[90m │ [39m[34mModel:qwen3:30b[39m[90m │ [39mWorkspace:ollama-agent[90m │ [39m[90mCtrl+P Palette[39m"
`;

exports[`layout snapshots same structure, density-only changes at 160x45 1`] = `
"[35mDevAgent[39m[90m │ [39mollama-agent[90m │ [39m[34mqwen3:30b[39m[90m │ [39m⎇ main[90m │ [39mctx68%[90m │ [39m[34mCode[39m[90m │ [39m[32mIDLE[39m[90m │ [39m[33mGit:2m[39m[90m │ [39m[90m10:42[39m
[90m─[39m[1m[34m 1 Conversation [22m[39m[90m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m
[32m> [39mcreate filesystem tool

  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project

































[90m[2m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[22m[39m
[34mChat·[39m[90m │ [39m[90mPlan·[39m[90m │ [39m[34mExec▶[39m[90m │ [39m[34mTasks2[39m[90m │ [39m[33mGit2[39m[90m │ [39m[90mLogs·[39m[90m │ [39m[90mMem·[39m[90m │ [39m[90mMdl·[39m[90m │ [39m[90mMCP·[39m[90m │ [39m[90mSkl·[39m[90m │ [39m[90mLSP·[39m[90m │ [39m[90mTok48k/71k[39m
[90m[2m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[22m[39m
[1m[32m> [22m[39m[7m [27m
[34mMode:Code[39m[90m │ [39m[34mModel:qwen3:30b[39m[90m │ [39mWorkspace:ollama-agent[90m │ [39m[90mCtrl+P Palette[39m"
`;

exports[`layout snapshots same structure, density-only changes at 220x60 1`] = `
"[35mDevAgent[39m[90m │ [39mollama-agent[90m │ [39m[34mqwen3:30b[39m[90m │ [39m⎇ main[90m │ [39mctx68%[90m │ [39m[34mCode[39m[90m │ [39m[32mIDLE[39m[90m │ [39m[33mGit:2m[39m[90m │ [39m[90m10:42[39m
[90m─[39m[1m[34m 1 Conversation [22m[39m[90m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m
[32m> [39mcreate filesystem tool

  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project
















































[90m[2m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[22m[39m
[34mChat·[39m[90m │ [39m[90mPlan·[39m[90m │ [39m[34mExec▶[39m[90m │ [39m[34mTasks2[39m[90m │ [39m[33mGit2[39m[90m │ [39m[90mLogs·[39m[90m │ [39m[90mMem·[39m[90m │ [39m[90mMdl·[39m[90m │ [39m[90mMCP·[39m[90m │ [39m[90mSkl·[39m[90m │ [39m[90mLSP·[39m[90m │ [39m[90mTok48k/71k[39m
[90m[2m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[22m[39m
[1m[32m> [22m[39m[7m [27m
[34mMode:Code[39m[90m │ [39m[34mModel:qwen3:30b[39m[90m │ [39mWorkspace:ollama-agent[90m │ [39m[90mCtrl+P Palette[39m"
`;
